--- a/references.bib
+++ b/references.bib
@@ -3070,6 +3070,13 @@ eprint = {https://doi.org/10.1146/annurev-publhealth-040617-014317}
 
 % UUUUUUUUUUUUUUU
 
+@misc{unicef22,
+  title={With {UNICEF} support, {H}aiti kickstarts campaign to immunize about 1.7 million people against cholera},
+  author = {{UNICEF}},
+  year = {2022},
+  url = {https://www.unicef.org/lac/en/press-releases/with-unicef-support-haiti-kickstarts-campaign-to-immunize-about-1.7-million-people-against-cholera}
+}
+
 % VVVVVVVVVVVVVVV
 
 @book{vandermeer13,
