--- a/conclusion/section-Conclusion.tex
+++ b/conclusion/section-Conclusion.tex
@@ -20,21 +20,21 @@
 		\begin{center} \ccbysa \end{center}
 	\end{frame}
 
-	% FRAME
-   \begin{standoutenv}
-   \begin{frame}[fragile]
-      The final slide using the standout style with command:
-		\begin{verbatim}
-			\begin{frame}[standout, plain]{Thank You !}
-				Questions ?
-		 	\end{frame }
-		\end{verbatim}
-
-		\begin{center}
-			Et voilà !
-		\end{center}
-   \end{frame}
-   \end{standoutenv}
+% 	% FRAME
+%    \begin{standoutenv}
+%    \begin{frame}[fragile]
+%       The final slide using the standout style with command:
+% 		\begin{verbatim}
+% 			\begin{frame}[standout, plain]{Thank You !}
+% 				Questions ?
+% 		 	\end{frame }
+% 		\end{verbatim}
+% 
+% 		\begin{center}
+% 			Et voilà !
+% 		\end{center}
+%    \end{frame}
+%    \end{standoutenv}
 	
 \end{document}
 
