--- a/header.tex
+++ b/header.tex
@@ -7,3 +7,48 @@
 \newcommand\myeqref[1]{(\ref{#1})}
 \newcommand\MApar{\varphi}
 \newcommand\code[1]{\texttt{#1}}
+
+% HAITI Macros
+\newcommand\Wsat{W_{\mathrm{sat}}}
+\newcommand\muIR{\mu_{IR}}
+\newcommand\muEI{\mu_{EI}}
+\newcommand\transmission{\beta}
+\newcommand\seasAmplitude{a}
+\newcommand\rainfallExponent{r}
+\newcommand\muRS{\mu_{RS}}
+\newcommand\vaccineEfficacy{\vartheta}
+\newcommand\muBirth{\mu_S}
+\newcommand\muDeath{\delta}
+\newcommand\choleraDeath{\delta_{C}}
+\newcommand\symptomFrac{f}
+\newcommand\asymptomRelativeInfect{\epsilon}
+\newcommand\asymptomRelativeShed{\epsilon_{W}}
+\newcommand\Wbeta[1]{\beta_{W#1}}
+\newcommand\Whur[1]{\beta_{W#1}^{hm}}
+\newcommand\hHur[1]{h_{#1}^{hm}}
+\newcommand\tHur{t_{hm}}
+\newcommand\Iinit{I_{0,0}}
+\newcommand\Einit{E_{0, 0}}
+\newcommand\Wremoval{\delta_W}
+\newcommand\Wshed{\mu_W}
+\newcommand\mixExponent{\nu}
+\newcommand\sigmaProc{\sigma_{\mathrm{proc}}}
+\newcommand\reportRate{\rho}
+\newcommand\obsOverdispersion{\psi}
+\newcommand\phaseParm{\phi}
+\newcommand\transmissionTrend{\zeta}
+\newcommand\Binit{\xi}
+\newcommand\vaccClass{Z}
+\newcommand\vaccCounter{z}
+\newcommand\modelCounter{m}
+\newcommand\missing{}
+\newcommand\fixed{^\dagger}
+\newcommand\demography{\bullet}
+\newcommand\figTitle{\bf}
+\newcommand\childReduce{q}
+\newcommand\NBintercept{\alpha}
+\newcommand\NBar{\beta}
+\newcommand\NBsize{\varphi}
+\newcommand\reportChange{\delta}
+
+\usepackage{pict2e}
