--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 	}
 
 	\usepackage{standalone}
-	% \usepackage{xcolor}
+	\usepackage{colortbl,xcolor}
 	\usepackage{natbib}
 	\usepackage{tikz}
 	\usepackage{bm}
